# just_another_modloader

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_debug.sh  build_release.sh
.github/: dependabot.yml
.github/workflows/: codacy.yml  codeql.yml  dependency-review.yml  devskim.yml  rust-clippy.yml  rust.yml
addons/Netplay/: info.hjson
addons/example/: example.cpp  info.hjson
addons/statistics_counter/: info.hjson
addons/statistics_counter/include/: hook_functions.hpp  main.hpp  original_functions.hpp  stdfunc.hpp
addons/statistics_counter/src/: hook_functions.cpp  main.cpp  stdfunc.cpp
addons/test/: info.hjson  test.cpp
src/: lib.rs
states_dll/include/: hook_functions.hpp  main.hpp  original_functions.hpp  stdfunc.h  stdfunc.hpp
states_dll/src/: hook_functions.cpp  main.cpp  stdfunc.c  stdfunc.cpp
states_dll/stdfunc/include/: stdfunc.h
states_dll/stdfunc/src/: stdfunc.c
