[package]
name = "just_another_modloader"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
incremental = true
panic = "abort"
opt-level = "z"

[lib]
crate-type = [ "cdylib", "rlib", "staticlib" ]

[dependencies]
deser-hjson = "*"
serde = "*"
winapi = { version = "*", features = [ "consoleapi", "minwindef", "winuser", "windef", "libloaderapi" ] }
